# mirp-lab-1

./: CMakeLists.txt
.github/workflows/: CI.yml
assets/: topology-1.txt  topology-2.txt
docker/: Dockerfile
src/: cli.c  cli.h  main.c  parser.c  parser.h  raii.h  raii_impl.h  to_string.c  to_string.h  to_string_impl.h  topology.c  topology.h  vector.c  vector.h
